# codeindex

./: Cargo.toml  FEEDBACK.md  LICENSE-MIT  PLAN.md  README.md  ROADMAP.md  TODO.md
.github/workflows/: agent-diagnostics.yml  agent-fixup.yml  ci.yml  run-source-incremental-cas-fixup.yml  source-api-diagnostics.yml  source-clippy-fixup.yml  source-incremental-cas-fixup.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: daemon.rs
crates/codeindex/: Cargo.toml
crates/codeindex-embedding/: Cargo.toml  build.rs
crates/codeindex-embedding/src/: lib.rs
crates/codeindex-embedding/src/embed/: fastembed_backend.rs  hash.rs  mod.rs
crates/codeindex-indexer/: Cargo.toml
crates/codeindex-indexer/src/: embed.rs  scanner.rs
crates/codeindex-query/: Cargo.toml
crates/codeindex-sqlite/: Cargo.toml
crates/codeindex-sqlite/src/: migrations.rs  models.rs
crates/codeindex-tree-sitter/: Cargo.toml
crates/codeindex-tree-sitter/assets/languages/: c.toml  cpp.toml  kotlin.toml  python.toml  ruby.toml  rust.toml
crates/codeindex-tree-sitter/assets/languages/c/: units.scm
crates/codeindex-tree-sitter/assets/languages/cpp/: units.scm
crates/codeindex-tree-sitter/assets/languages/csharp/: units.scm
crates/codeindex-tree-sitter/assets/languages/java/: units.scm
crates/codeindex-tree-sitter/assets/languages/kotlin/: units.scm
crates/codeindex-tree-sitter/assets/languages/rust/: units.scm
crates/codeindex-tree-sitter/src/: extractor.rs  language.rs  normalizer.rs
crates/codeindex/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: entity_kind.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: client.rs  lib.rs  pipeline.rs  protocol.rs  server.rs  state.rs
crates/embedding/: Cargo.toml  build.rs
crates/embedding/src/: config.rs  lib.rs  rerank.rs  resolve.rs
crates/embedding/src/embed/: candle_backend.rs  fastembed_backend.rs  hash.rs  mod.rs
crates/embedding/tests/: qwen3_conformance.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: embed.rs  lib.rs  run.rs  source.rs  stage.rs
crates/indexer/tests/: atomic_resumable.rs  pipeline.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  lib.rs
crates/lsp/tests/: clangd.rs  rust_analyzer.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs  vector_store.rs
crates/search/tests/: round_trip.rs
crates/source/: Cargo.toml
crates/source-fs/: Cargo.toml
crates/source-fs/src/: lib.rs
crates/source/src/: lib.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: index_publish.rs  index_runs.rs  lib.rs  migrations.rs  models.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tree-sitter/: Cargo.toml
crates/tree-sitter/assets/languages/: c.toml  cpp.toml  csharp.toml  go.toml  java.toml  javascript.toml  kotlin.toml  php.toml  python.toml  ruby.toml  rust.toml  typescript.toml
crates/tree-sitter/assets/languages/go/: units.scm
crates/tree-sitter/assets/languages/javascript/: references.scm
crates/tree-sitter/assets/languages/php/: units.scm
crates/tree-sitter/assets/languages/python/: units.scm
crates/tree-sitter/assets/languages/ruby/: units.scm
crates/tree-sitter/assets/languages/rust/: references.scm
crates/tree-sitter/assets/languages/typescript/: units.scm
crates/tree-sitter/src/: extractor.rs  language.rs  lib.rs
docs/: architecture.md  atomic-resumable-indexing-plan.md  daemon-cli-plan.md  getting-started.md  m1-m4-plan.md  rearchitecture-plan.md  structured-diagnostics-and-errors-plan.md
docs/history/: atomic-resumable-indexing-plan.md  m1-m4-plan.md
evals/: 2026-07-14-qwen3-scenarios-results.json  2026-07-14-qwen3-scenarios.md  2026-07-15-daemon-big-corpus.md  qwen3-scenarios.sh
