[package]
name = "codeindex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line consumer of the atomic codeindex library state machine"
publish = false

[[bin]]
name = "codeindex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.5.54", features = ["derive"] }
codeindex-indexer = { path = "../indexer" }
codeindex-sqlite = { path = "../sqlite" }
codeindex-tree-sitter = { path = "../tree-sitter" }
ctrlc = { version = "3.5.1", features = ["termination"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
