[package]
name = "codeindex"
version = "0.1.0"
edition = "2024"
description = "Facade over the reusable codeindex crates"
publish = false

[dependencies]
codeindex-core = { path = "../core" }
codeindex-embedding = { path = "../embedding", default-features = false }
codeindex-indexer = { path = "../indexer" }
codeindex-query = { path = "../query" }
codeindex-search = { path = "../search" }
codeindex-sqlite = { path = "../sqlite" }
codeindex-tree-sitter = { path = "../tree-sitter" }

[features]
default = []
fastembed = ["codeindex-embedding/fastembed"]
accel = ["fastembed", "codeindex-embedding/accel"]
cuda = ["accel", "codeindex-embedding/cuda"]
directml = ["accel", "codeindex-embedding/directml"]
coreml = ["accel", "codeindex-embedding/coreml"]
openvino = ["accel", "codeindex-embedding/openvino"]
load-dynamic = ["accel", "codeindex-embedding/load-dynamic"]
