[package]
name = "codeindex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Facade over the reusable codeindex crates"
publish = false

[dependencies]
codeindex-core = { path = "../core" }
codeindex-embedding = { path = "../embedding", default-features = false }
codeindex-indexer = { path = "../indexer" }
codeindex-query = { path = "../query" }
codeindex-search = { path = "../search" }
codeindex-sqlite = { path = "../sqlite" }
codeindex-storage = { path = "../storage" }
codeindex-tree-sitter = { path = "../tree-sitter" }

[features]
default = []
fastembed = ["codeindex-embedding/fastembed"]
accel = ["fastembed", "codeindex-embedding/accel"]
cuda = ["accel", "codeindex-embedding/cuda"]
directml = ["accel", "codeindex-embedding/directml"]
coreml = ["accel", "codeindex-embedding/coreml"]
openvino = ["accel", "codeindex-embedding/openvino"]
load-dynamic = ["accel", "codeindex-embedding/load-dynamic"]
