[package]
name = "codeindex-config"
description = "Project discovery (.codeindex.toml), layered configuration, and the registry of indexed roots"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.12"
