[package]
name = "codeindex-daemon"
description = "Stateful background daemon: warm search over registered roots, served on authenticated daemonkit streams"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
codeindex-config = { path = "../config" }
codeindex-core = { path = "../core" }
codeindex-embedding = { path = "../embedding", default-features = false }
codeindex-indexer = { path = "../indexer" }
codeindex-query = { path = "../query" }
codeindex-search = { path = "../search" }
codeindex-sqlite = { path = "../sqlite" }
codeindex-tree-sitter = { path = "../tree-sitter" }
daemonkit = "0.1.0"
futures-core = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
toml = "1.1.2"

[features]
default = []
fastembed = ["codeindex-embedding/fastembed"]
candle = ["codeindex-embedding/candle"]
