[package]
name = "codeindex-embedding"
version = "0.1.0"
edition = "2024"
description = "Embedding models and resumable projections for code indexes"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
fastembed = { version = "5.17.2", optional = true }
hex = "0.4.3"
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false }
sha2 = "0.11.0"
ureq = { version = "3.3.0", optional = true }

[features]
default = []
fastembed = ["dep:fastembed", "dep:ureq"]
accel = ["fastembed", "dep:ort"]
cuda = ["accel", "ort/cuda"]
directml = ["accel", "ort/directml", "fastembed/directml"]
coreml = ["accel", "ort/coreml"]
openvino = ["accel", "ort/openvino"]
load-dynamic = ["accel", "ort/load-dynamic", "fastembed/ort-load-dynamic"]

[dev-dependencies]
tempfile = "3.27.0"
