[package]
name = "codeindex-embedding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Embedding models and resumable projections for code indexes"
publish = false

[dependencies]
anyhow = "1.0.103"
candle-core = { version = "0.11", optional = true }
candle-nn = { version = "0.11", optional = true }
candle-transformers = { version = "0.11", optional = true }
codeindex-core = { path = "../core" }
fastembed = { version = "5.17.2", optional = true }
hex = "0.4.3"
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tokenizers = { version = "0.23", optional = true }
toml = "0.9"
ureq = "3.3.0"

[features]
default = []
fastembed = ["dep:fastembed"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]
candle-cuda = ["candle", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
candle-metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accel = ["fastembed", "dep:ort"]
cuda = ["accel", "ort/cuda"]
directml = ["accel", "ort/directml", "fastembed/directml"]
coreml = ["accel", "ort/coreml"]
openvino = ["accel", "ort/openvino"]
load-dynamic = ["accel", "ort/load-dynamic", "fastembed/ort-load-dynamic"]

[dev-dependencies]
tempfile = "3.27.0"
