[package]
name = "codeindex-indexer"
version = "0.1.0"
edition = "2024"
description = "Incremental filesystem indexing orchestration for codeindex"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
codeindex-embedding = { path = "../embedding", default-features = false }
codeindex-sqlite = { path = "../sqlite" }
codeindex-tree-sitter = { path = "../tree-sitter" }
ignore = "0.4.27"

[dev-dependencies]
tempfile = "3.27.0"
