[package]
name = "codeindex-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Incremental filesystem indexing orchestration for codeindex"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
codeindex-embedding = { path = "../embedding", default-features = false }
codeindex-sqlite = { path = "../sqlite" }
codeindex-tree-sitter = { path = "../tree-sitter" }
ignore = "0.4.27"

[dev-dependencies]
tempfile = "3.27.0"
