[package]
name = "codeindex-query"
version = "0.1.0"
edition = "2024"
description = "Reusable filtering, stable selectors, and vector ranking for code indexes"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-sqlite = { path = "../sqlite" }
globset = "0.4.18"
hex = "0.4.3"
sha2 = "0.11.0"
