[package]
name = "codeindex-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reusable filtering, stable selectors, and vector ranking for code indexes"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
globset = "0.4.18"
hex = "0.4.3"
sha2 = "0.11.0"
