[package]
name = "codeindex-search"
version = "0.1.0"
edition = "2024"
description = "End-to-end semantic search over a code index: load, embed, verify, rank, resolve"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
codeindex-embedding = { path = "../embedding", default-features = false }
codeindex-query = { path = "../query" }
codeindex-sqlite = { path = "../sqlite" }
rayon = "1.12.0"
rusqlite = "0.40.1"
