[package]
name = "codeindex-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "End-to-end semantic search over a code index: load, embed, verify, rank, resolve"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
codeindex-embedding = { path = "../embedding", default-features = false }
codeindex-query = { path = "../query" }
codeindex-storage = { path = "../storage" }
rayon = "1.12.0"

[dev-dependencies]
codeindex-sqlite = { path = "../sqlite" }
codeindex-indexer = { path = "../indexer" }
