[package]
name = "codeindex-source-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Filesystem source workspace implementation for codeindex"
publish = false

[dependencies]
codeindex-source = { path = "../source" }
ignore = "0.4.27"

[dev-dependencies]
tempfile = "3.27.0"
