[package]
name = "codeindex-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite persistence and migrations for code indexes"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
