[package]
name = "codeindex-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite persistence and migrations for code indexes"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
codeindex-storage = { path = "../storage" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.27.0"
