[package]
name = "codeindex-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Storage-neutral, serializable index snapshot the search engine loads from"
publish = false

[dependencies]
codeindex-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
