[package]
name = "codeindex-tree-sitter"
version = "0.1.0"
edition = "2024"
description = "Tree-sitter language frontend for codeindex-core"
publish = false

[dependencies]
anyhow = "1.0.103"
codeindex-core = { path = "../core" }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
streaming-iterator = "0.1.9"
toml = "1.1.2"
tree-sitter = "0.26.10"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
